--- a/src/components/cooperation/_map.pug
+++ b/src/components/cooperation/_map.pug
@@ -1,7 +1,7 @@
 .cooperation-map
   .container.container--team
-    p.today__section Наши клиенты и партнеры
-    .cooperation-map__map
+    p.today__section(data-aos="fade-up") Наши клиенты и партнеры
+    .cooperation-map__map(data-aos="fade-up")
       .map__tooltips
         .map__tooltip#s_sheme__tooltip-1
           .map__tooltip-title Москва
