--- a/src/components/materials/_materials.pug
+++ b/src/components/materials/_materials.pug
@@ -3,7 +3,7 @@
 
     include ../page-head/_materials
 
-    .materials__scroll
+    .materials__scroll(data-aos="fade-up")
       .materials__filter
         a.materials__filter-btn.is-active(href="#" js-materials-btn) Все
         a.materials__filter-btn(href="#" js-materials-btn) Каталоги
@@ -14,7 +14,7 @@
 
     .materials__grid
       .materials__col
-        .materials__item
+        .materials__item(data-aos="fade-up")
           .materials__icon
             +svgColor('icon-doc')
             .ico-hover
@@ -24,7 +24,7 @@
           .materials__size
             p pdf. 2 mb
       .materials__col
-        .materials__item
+        .materials__item(data-aos="fade-up")
           .materials__icon
             +svgColor('icon-doc')
             .ico-hover
@@ -34,7 +34,7 @@
           .materials__size
             p pdf. 2 mb
       .materials__col
-        .materials__item
+        .materials__item(data-aos="fade-up")
           .materials__icon
             +svgColor('icon-doc')
             .ico-hover
@@ -44,7 +44,7 @@
           .materials__size
             p pdf. 2 mb
       .materials__col
-        .materials__item
+        .materials__item(data-aos="fade-up")
           .materials__icon
             +svgColor('icon-doc')
             .ico-hover
@@ -54,7 +54,7 @@
           .materials__size
             p pdf. 2 mb
       .materials__col
-        .materials__item
+        .materials__item(data-aos="fade-up")
           .materials__icon
             +svgColor('icon-doc')
             .ico-hover
@@ -64,7 +64,7 @@
           .materials__size
             p pdf. 2 mb
       .materials__col
-        .materials__item
+        .materials__item(data-aos="fade-up")
           .materials__icon
             +svgColor('icon-doc')
             .ico-hover
@@ -74,7 +74,7 @@
           .materials__size
             p pdf. 2 mb
       .materials__col
-        .materials__item
+        .materials__item(data-aos="fade-up")
           .materials__icon
             +svgColor('icon-doc')
             .ico-hover
@@ -84,7 +84,7 @@
           .materials__size
             p pdf. 2 mb
       .materials__col
-        .materials__item
+        .materials__item(data-aos="fade-up")
           .materials__icon
             +svgColor('icon-doc')
             .ico-hover
@@ -94,7 +94,7 @@
           .materials__size
             p pdf. 2 mb
       .materials__col
-        .materials__item
+        .materials__item(data-aos="fade-up")
           .materials__icon
             +svgColor('icon-doc')
             .ico-hover
@@ -104,7 +104,7 @@
           .materials__size
             p pdf. 2 mb
       .materials__col
-        .materials__item
+        .materials__item(data-aos="fade-up")
           .materials__icon
             +svgColor('icon-doc')
             .ico-hover
@@ -114,7 +114,7 @@
           .materials__size
             p pdf. 2 mb
       .materials__col
-        .materials__item
+        .materials__item(data-aos="fade-up")
           .materials__icon
             +svgColor('icon-doc')
             .ico-hover
@@ -124,7 +124,7 @@
           .materials__size
             p pdf. 2 mb
       .materials__col
-        .materials__item
+        .materials__item(data-aos="fade-up")
           .materials__icon
             +svgColor('icon-doc')
             .ico-hover
@@ -134,7 +134,7 @@
           .materials__size
             p pdf. 2 mb
       .materials__col
-        .materials__item
+        .materials__item(data-aos="fade-up")
           .materials__icon
             +svgColor('icon-doc')
             .ico-hover
@@ -144,7 +144,7 @@
           .materials__size
             p pdf. 2 mb
       .materials__col
-        .materials__item
+        .materials__item(data-aos="fade-up")
           .materials__icon
             +svgColor('icon-doc')
             .ico-hover
@@ -154,7 +154,7 @@
           .materials__size
             p pdf. 2 mb
       .materials__col
-        .materials__item
+        .materials__item(data-aos="fade-up")
           .materials__icon
             +svgColor('icon-doc')
             .ico-hover
@@ -164,7 +164,7 @@
           .materials__size
             p pdf. 2 mb
       .materials__col
-        .materials__item
+        .materials__item(data-aos="fade-up")
           .materials__icon
             +svgColor('icon-doc')
             .ico-hover
