--- a/src/components/page-head/_article.pug
+++ b/src/components/page-head/_article.pug
@@ -1,3 +1,3 @@
 .page-head
-  p.page-head__pre-title 15 августа 2019
-  p.page-head__title Осень не за горами – Полимербыт представляет эффективные решения для школьников
+  p.page-head__pre-title(data-aos="fade-up") 15 августа 2019
+  p.page-head__title(data-aos="fade-up") Осень не за горами – Полимербыт представляет эффективные решения для школьников
