--- a/src/components/production/_graph.pug
+++ b/src/components/production/_graph.pug
@@ -1,4 +1,4 @@
-.production__graph
+.production__graph(data-aos="fade-right")
   .container.container--team
     p.today__section Полный цикл
       br
