--- a/src/components/article/_article.pug
+++ b/src/components/article/_article.pug
@@ -3,29 +3,29 @@ article.article
 
     include ../page-head/_article
 
-    .article__image.scaler(style="padding-bottom: "+ (458/753)*100 +"%; background-image: url(https://res.cloudinary.com/dqruxbmfq/image/upload/w_128,c_fill,e_blur:400/v1567858296/polimer/articleImg.jpg)")
+    .article__image.scaler(style="padding-bottom: "+ (458/753)*100 +"%; background-image: url(https://res.cloudinary.com/dqruxbmfq/image/upload/w_128,c_fill,e_blur:400/v1567858296/polimer/articleImg.jpg)" data-aos="fade-up")
       img(js-lazy data-src='img/articleImg.jpg' data-srcset='img/articleImg@2x.jpg 2x')
     .article__content
-      p.p-big Вся продукция изготовлена из безопасной пищевой пластмассы с яркими декорами, нанесенными с помощью технологии IML, которые не стираются и не отслаиваются в процессе использования.
-      p А любимые персонажи на изделиях из мультсериалов «Фиксики» и DISNEY («Самолеты», «Тачки», «Мики Маус», «Феи», « Принцессы») поднимут настроение Вашим учащимся и украсят их школьные будни!
-      p
+      p.p-big(data-aos="fade-up") Вся продукция изготовлена из безопасной пищевой пластмассы с яркими декорами, нанесенными с помощью технологии IML, которые не стираются и не отслаиваются в процессе использования.
+      p(data-aos="fade-up") А любимые персонажи на изделиях из мультсериалов «Фиксики» и DISNEY («Самолеты», «Тачки», «Мики Маус», «Феи», « Принцессы») поднимут настроение Вашим учащимся и украсят их школьные будни!
+      p(data-aos="fade-up")
         a(href="#") Ланч-боксы
         |   и
         a(href="#")  контейнеры
         |   0,75 л– Ваши ученики могут взять с собой в школу бутерброды, фрукты, печенье и много другое. Благодаря прочному материалу и удобным крышкам с защелками содержимое контейнера не помнётся и не рассыплется в рюкзаке, также в ланч-боксах можно разогревать пищу в СВЧ-печи.
-      p
+      p(data-aos="fade-up")
         a(href="#") Мультибоксы на 3
         |   и
         a(href="#")  5 секций
         |   – удобные настольные мини-комоды для хранения школьных принадлежностей помогут Вашим учащимся организовать пространство на письменном столе и украсят детский интерьер. С помощью съемных перегородок каждый ящик можно разделить пополам, а на крышке имеется несколько ячеек для ручек, ластиков и других мелочей.
-      p
+      p(data-aos="fade-up")
         a(href="#") Коробки (1,9 л
         |   и
         a(href="#")  5 ,5 л)
         |   для хранения, школьных принадлежностей и игрушек. Благодаря конструкции крышки и дна, коробки удобно ставить друг на друга для экономии места.
-      p
+      p(data-aos="fade-up")
         a(href="#") Контейнеры для фломастеров и карандашей 0,6 л
         |   с надежными и удобными крышками, благодаря которым содержимое не высыплется из контейнера.
-      p
+      p(data-aos="fade-up")
         a(href="#") Ящики (6,5 л; 10 л; 15 л; 30л) для хранения игрушек,
         |   одежды и школьных принадлежностей с яркими декорами станут незаменимыми помощниками в наведении порядка и организации пространства в детской комнате. Крышки контейнеров надежно закрываются на защелки, а ручки на крышке позволят переносить ящики с места на место или брать с собой в дорогу.
