--- a/src/components/cooperation/_info.pug
+++ b/src/components/cooperation/_info.pug
@@ -1,9 +1,9 @@
 // COOPERATION INFO
 .cooperation
   .container.container--team
-    p.cooperation__text При всем масштабе своего производства компания имеет большую гибкость в части обеспечения поставок клиентам, не прекращает искать новые идеи и постоянно расширяет свой ассортимент.
+    p.cooperation__text(data-aos="fade-up") При всем масштабе своего производства компания имеет большую гибкость в части обеспечения поставок клиентам, не прекращает искать новые идеи и постоянно расширяет свой ассортимент.
     .cooperation__row
-      .cooperation__info
+      .cooperation__info(data-aos="fade-up")
         .cooperation__icon
           +svgColor('icon-assort')
         p.cooperation__info-title Широкий ассортимент продукции.
@@ -12,10 +12,10 @@
           | , состоящем из самых востребованных рынком и потребителями изделий. Основные характеристики ассортимента:
           span  строгий контроль качества, регулярная актуализация внешнего вида изделий для соответствия текущим вкусам потребителей
           | , неснижаемый складской запас для бесперебойных регулярных отгрузок.
-      .cooperation__image.scaler(style="padding-bottom: "+ (300/600)*100 +"%; background-image: url(https://res.cloudinary.com/dqruxbmfq/image/upload/w_128,c_fill,e_blur:400/v1567858296/polimer/cooperationImg1.jpg)")
+      .cooperation__image.scaler(style="padding-bottom: "+ (300/600)*100 +"%; background-image: url(https://res.cloudinary.com/dqruxbmfq/image/upload/w_128,c_fill,e_blur:400/v1567858296/polimer/cooperationImg1.jpg)" data-aos="fade-right")
         img(js-lazy data-src='img/cooperationImg1.jpg' data-srcset='img/cooperationImg1@2x.jpg 2x')
     .cooperation__row.cooperation__row--reverse
-      .cooperation__info
+      .cooperation__info(data-aos="fade-up")
         .cooperation__icon
           +svgColor('icon-high')
         p.cooperation__info-title Высокий технологический уровень и качество продукции.
@@ -24,30 +24,30 @@
           |  позволяет достигать необходимого уровня качества продукции и применять полный
           span  набор разнообразных технологий изготовления изделий из пластмассы
           |  (в том числе, двухкомпонентное литье, литье изделий сложной конфигурации, нанесение рисунков на изделия).
-      .cooperation__image.scaler(style="padding-bottom: "+ (300/600)*100 +"%; background-image: url(https://res.cloudinary.com/dqruxbmfq/image/upload/w_128,c_fill,e_blur:400/v1567858296/polimer/cooperationImg2.jpg)")
+      .cooperation__image.scaler(style="padding-bottom: "+ (300/600)*100 +"%; background-image: url(https://res.cloudinary.com/dqruxbmfq/image/upload/w_128,c_fill,e_blur:400/v1567858296/polimer/cooperationImg2.jpg)" data-aos="fade-left")
         img(js-lazy data-src='img/cooperationImg2.jpg' data-srcset='img/cooperationImg2@2x.jpg 2x')
 
 .cooperation__advantages
   .container.container--team
     .cooperation__grid
-      .cooperation__advantage
+      .cooperation__advantage(data-aos="fade-up" data-aos-delay="50")
         .cooperation__advantage-icon
           +svgColor('icon-optimization')
         p.cooperation__advantage-title Оптимизация издержек и привлекательность цен.
         p.cooperation__advantage-main Один из самых низких в отрасли уровень издержек, обеспечиваемый современным оборудованием, отлаженными бизнес-процессами и масштабностью производства позволяет Полимербыту предлагать товар покупателям по наиболее выгодным для них ценам.
-      .cooperation__advantage
+      .cooperation__advantage(data-aos="fade-up" data-aos-delay="100")
         .cooperation__advantage-icon
           +svgColor('icon-dist')
         p.cooperation__advantage-title Способность выполнять требования дистрибуторов и розничных сетей.
         p.cooperation__advantage-main Для дистрибуторов и розничных сетей критически важно наличие ассортимента на складе и полная комплектация заказов в сжатые сроки, иногда, в течение 2-3 дней.
-      .cooperation__advantage
+      .cooperation__advantage(data-aos="fade-up" data-aos-delay="150")
         .cooperation__advantage-icon
           +svgColor('icon-points')
         p.cooperation__advantage-title Расположение производства вблизи от основных рынков сбыта.
         p.cooperation__advantage-main Производственные и складские мощности компании расположены в г. Москва и, тем самым, максимально приближены к основным рынкам сбыта, находящимся в Европейской части России.
 
-    .cooperation__separator
-    .cooperation__conditions
+    .cooperation__separator(data-aos="fade-up")
+    .cooperation__conditions(data-aos="fade-up")
       a.nav-link(href="#yur-popup" js-popup)
         .nav-link__content
           .nav-link__title Условия сотрудничества
