--- a/src/components/page-head/_materials.pug
+++ b/src/components/page-head/_materials.pug
@@ -1,3 +1,3 @@
 .page-head
-  p.page-head__pre-title Полезные материалы
-  p.page-head__title Вы также будете приятно удивлены стоимостью наших изделий, так как важнейшим приоритетом работы.
+  p.page-head__pre-title(data-aos="fade-up") Полезные материалы
+  p.page-head__title(data-aos="fade-up") Вы также будете приятно удивлены стоимостью наших изделий, так как важнейшим приоритетом работы.
