--- a/src/components/production/_info.pug
+++ b/src/components/production/_info.pug
@@ -1,41 +1,41 @@
 // PRODUCTION INFO
 .production
   .container.container--team
-    p.cooperation__text Год за годом «Полимербыт» производит пластиковые изделия для комфортной жизни, чтобы делать быт наших потребителей проще и приятнее. Для этого мы используем самые современные технологии в литье, обработке и декорировании пластмасс.
-    p.today__section Производство АО «Полимербыт» - это
+    p.cooperation__text(data-aos="fade-up") Год за годом «Полимербыт» производит пластиковые изделия для комфортной жизни, чтобы делать быт наших потребителей проще и приятнее. Для этого мы используем самые современные технологии в литье, обработке и декорировании пластмасс.
+    p.today__section(data-aos="fade-up") Производство АО «Полимербыт» - это
     .today__row
-      .today__item
+      .today__item(data-aos="fade-up" data-aos-delay="100")
         p.today__item-title 94
         p.today__item-sub-title ТПА
-      .today__item
+      .today__item(data-aos="fade-up" data-aos-delay="200")
         p.today__item-title 32
         p.today__item-sub-title IML робота
-      .today__item
+      .today__item(data-aos="fade-up" data-aos-delay="300")
         p.today__item-title 141
         p.today__item-sub-title пресс-форма
-      .today__item
+      .today__item(data-aos="fade-up" data-aos-delay="400")
         p.today__item-title 84
         p.today__item-sub-title работников
     .cooperation__row.cooperation__row--reverse
-      .cooperation__info
+      .cooperation__info(data-aos="fade-up")
         .cooperation__icon
           +svgColor('icon-potential')
         p.cooperation__info-main
           span Производственный потенциал Полимербыта по своим возможностям на несколько лет опережает ближайших конкурентов в России
           | , а по ряду своих инновационных разработок зачастую превосходит уровень компаний Западной Европы и США.
-      .cooperation__image.scaler(style="padding-bottom: "+ (300/600)*100 +"%; background-image: url(https://res.cloudinary.com/dqruxbmfq/image/upload/w_128,c_fill,e_blur:400/v1567858296/polimer/productionImg1.jpg)")
+      .cooperation__image.scaler(style="padding-bottom: "+ (300/600)*100 +"%; background-image: url(https://res.cloudinary.com/dqruxbmfq/image/upload/w_128,c_fill,e_blur:400/v1567858296/polimer/productionImg1.jpg)" data-aos="fade-left")
         img(js-lazy data-src='img/productionImg1.jpg' data-srcset='img/productionImg1@2x.jpg 2x')
     .cooperation__row
-      .cooperation__info
+      .cooperation__info(data-aos="fade-up")
         .cooperation__icon
           +svgColor('icon-production')
         p.cooperation__info-main
           span Производство компании построено на прочной инфраструктурной базе
           | , которая среди прочего включает в себя не имеющую аналогов систему охлаждения пресс-форм, систему автоматической подачи сырья, надежное энергообеспечение.
-      .cooperation__image.scaler(style="padding-bottom: "+ (300/600)*100 +"%; background-image: url(https://res.cloudinary.com/dqruxbmfq/image/upload/w_128,c_fill,e_blur:400/v1567858296/polimer/productionImg2.jpg)")
+      .cooperation__image.scaler(style="padding-bottom: "+ (300/600)*100 +"%; background-image: url(https://res.cloudinary.com/dqruxbmfq/image/upload/w_128,c_fill,e_blur:400/v1567858296/polimer/productionImg2.jpg)" data-aos="fade-right")
         img(js-lazy data-src='img/productionImg2.jpg' data-srcset='img/productionImg2@2x.jpg 2x')
-    p.production__prod На Полимербыте установлено современное оборудование итальянского и португальского производства.
-  .production__slider-container
+    p.production__prod(data-aos="fade-up") На Полимербыте установлено современное оборудование итальянского и португальского производства.
+  .production__slider-container(data-aos="fade-up")
     .production__slider(js-slider)
       .swiper-wrapper
         .swiper-slide.production__slide.scaler(style="padding-bottom: "+ (300/600)*100 +"%; background-image: url(https://res.cloudinary.com/dqruxbmfq/image/upload/w_128,c_fill,e_blur:400/v1567858296/polimer/productionSlider1.jpg)")
@@ -47,7 +47,7 @@
   .production__information
     .container.container--team
       .production__information-grid
-        .production__left
+        .production__left(data-aos="fade-right")
           .production__left-item
             .production__left-icon
               +svgColor('icon-2tech')
@@ -60,6 +60,6 @@
             p
               span Технология IML (IN-MOLD LABELING) позволяет получать на пластиковой поверхности четкую графику
               |  и фотореалистичное изображение, устойчивое к мытью и истиранию.
-        .production__right
+        .production__right(data-aos="fade-up")
           p Большая часть рутинных операций полностью автоматизирована и выполняется современными роботами. Собственный инструментальный цех, оснащенный самым передовым высокоточным металлорежущим оборудованием, позволяет при необходимости самостоятельно модернизировать пресс-формы и поддерживать их работоспособность.
           p Все произведенные на предприятии изделия проходят тщательный многоступенчатый контроль качества и строго соответствуют всем требованиям ГОСТ, предъявляемым к продукции бытового назначения из пластика и экологичности используемых материалов.
