--- a/src/components/today/_today.pug
+++ b/src/components/today/_today.pug
@@ -3,91 +3,91 @@
   .container.container--team
     .today__grid
       .today__info
-        p.today__pre-title Полимербыт сегодня
-        p.today__title
+        p.today__pre-title(data-aos="fade-up") Полимербыт сегодня
+        p.today__title(data-aos="fade-up")
           span Полимербыт
           |  является главным игроком на российском рынке бытовых изделий из пластмасс.
-        p.today__sub-title Благодаря этим преимуществам Полимербыт неизменно, год за годом увеличивает свою клиентскую базу. В круг наших постоянных клиентов и партнеров входят крупнейшие сети России и ближнего зарубежья
+        p.today__sub-title(data-aos="fade-up") Благодаря этим преимуществам Полимербыт неизменно, год за годом увеличивает свою клиентскую базу. В круг наших постоянных клиентов и партнеров входят крупнейшие сети России и ближнего зарубежья
       .today__image
         img(src='img/todayInfo.png' srcset='img/todayInfo@2x.png 2x')
 
-    p.today__section Сегодня мы
+    p.today__section(data-aos="fade-up") Сегодня мы
     .today__row
-      .today__item
+      .today__item(data-aos="fade-up" data-aos-delay="100")
         p.today__item-pre-title Используем более
         p.today__item-title 9.194
         p.today__item-sub-title тонн сырья в год
-      .today__item
+      .today__item(data-aos="fade-up" data-aos-delay="200")
         p.today__item-pre-title Производим более
         p.today__item-title 66.055.557
         p.today__item-sub-title изделий в год
-      .today__item
+      .today__item(data-aos="fade-up" data-aos-delay="300")
         p.today__item-pre-title Выполняем более
         p.today__item-title 28.798
         p.today__item-sub-title отгрузок в год
-      .today__item
+      .today__item(data-aos="fade-up" data-aos-delay="400")
         p.today__item-pre-title Работаем
         p.today__item-title 8760
         p.today__item-sub-title часов в год
-      .today__item
+      .today__item(data-aos="fade-up" data-aos-delay="600")
         p.today__item-pre-title Проезжаем более
         p.today__item-title 37.000
         p.today__item-sub-title км в год
 
-    p.today__section Компанией руководят
+    p.today__section(data-aos="fade-up") Компанией руководят
       .team
         .team__grid
-          .team__col.team__col--2
+          .team__col.team__col--2(data-aos="fade-up" data-aos-delay="50")
             .team__image.scaler(style="padding-bottom: 100%; background-image: url(https://res.cloudinary.com/dqruxbmfq/image/upload/w_128,c_fill,e_blur:400/v1567858296/polimer/person1.jpg)")
               img(js-lazy data-src='img/person1.jpg' data-srcset='img/person1@2x.jpg 2x')
             .team__info
               p.name Петр Жуков
               p.prof Веб дизайнер
               p.desc Благодаря этим преимуществам Полимербыт неизменно, год за годом увеличивает свою клиентскую базу.
-          .team__col.team__col--2
+          .team__col.team__col--2(data-aos="fade-up" data-aos-delay="100")
             .team__image.scaler(style="padding-bottom: 100%; background-image: url(https://res.cloudinary.com/dqruxbmfq/image/upload/w_128,c_fill,e_blur:400/v1567858296/polimer/person1.jpg)")
               img(js-lazy data-src='img/person1.jpg' data-srcset='img/person1@2x.jpg 2x')
             .team__info
               p.name Петр Жуков
               p.prof Веб дизайнер
               p.desc Благодаря этим преимуществам Полимербыт неизменно, год за годом увеличивает свою клиентскую базу.
-          .team__col
+          .team__col(data-aos="fade-up" data-aos-delay="150")
             .team__image.scaler(style="padding-bottom: 100%; background-image: url(https://res.cloudinary.com/dqruxbmfq/image/upload/w_128,c_fill,e_blur:400/v1567858296/polimer/person2.jpg)")
               img(js-lazy data-src='img/person2.jpg' data-srcset='img/person2@2x.jpg 2x')
             .team__info
               p.name Кригер Игорь Игоревич
               p.prof Веб дизайнер
-          .team__col
+          .team__col(data-aos="fade-up" data-aos-delay="200")
             .team__image.scaler(style="padding-bottom: 100%; background-image: url(https://res.cloudinary.com/dqruxbmfq/image/upload/w_128,c_fill,e_blur:400/v1567858296/polimer/person1.jpg)")
               img(js-lazy data-src='img/person1.jpg' data-srcset='img/person1@2x.jpg 2x')
             .team__info
               p.name Кригер Игорь Игоревич
               p.prof Веб дизайнер
-          .team__col
+          .team__col(data-aos="fade-up" data-aos-delay="250")
             .team__image.scaler(style="padding-bottom: 100%; background-image: url(https://res.cloudinary.com/dqruxbmfq/image/upload/w_128,c_fill,e_blur:400/v1567858296/polimer/person3.jpg)")
               img(js-lazy data-src='img/person3.jpg' data-srcset='img/person3@2x.jpg 2x')
             .team__info
               p.name Кригер Игорь Игоревич
               p.prof Веб дизайнер
-          .team__col
+          .team__col(data-aos="fade-up" data-aos-delay="300")
             .team__image.scaler(style="padding-bottom: 100%; background-image: url(https://res.cloudinary.com/dqruxbmfq/image/upload/w_128,c_fill,e_blur:400/v1567858296/polimer/person4.jpg)")
               img(js-lazy data-src='img/person4.jpg' data-srcset='img/person4@2x.jpg 2x')
             .team__info
               p.name Кригер Игорь Игоревич
               p.prof Веб дизайнер
-          .team__col
+          .team__col(data-aos="fade-up" data-aos-delay="350")
             .team__image.scaler(style="padding-bottom: 100%; background-image: url(https://res.cloudinary.com/dqruxbmfq/image/upload/w_128,c_fill,e_blur:400/v1567858296/polimer/person5.jpg)")
               img(js-lazy data-src='img/person5.jpg' data-srcset='img/person5@2x.jpg 2x')
             .team__info
               p.name Кригер Игорь Игоревич
               p.prof Веб дизайнер
-          .team__col
+          .team__col(data-aos="fade-up" data-aos-delay="400")
             .team__image.scaler(style="padding-bottom: 100%; background-image: url(https://res.cloudinary.com/dqruxbmfq/image/upload/w_128,c_fill,e_blur:400/v1567858296/polimer/person6.jpg)")
               img(js-lazy data-src='img/person6.jpg' data-srcset='img/person6@2x.jpg 2x')
             .team__info
               p.name Кригер Игорь Игоревич
               p.prof Веб дизайнер
-          .team__col
+          .team__col(data-aos="fade-up" data-aos-delay="450")
             .team__image.scaler(style="padding-bottom: 100%; background-image: url(https://res.cloudinary.com/dqruxbmfq/image/upload/w_128,c_fill,e_blur:400/v1567858296/polimer/person7.jpg)")
               img(js-lazy data-src='img/person7.jpg' data-srcset='img/person7@2x.jpg 2x')
             .team__info
