IE fixes: footer, images, icons, tooltip images

--- a/src/components/homepage/_homepage.pug
+++ b/src/components/homepage/_homepage.pug
@@ -49,8 +49,7 @@
         .products__col.products__col--2
           .product
             .product__icon
-              //- +svgMono('home-eco')
-              img(src='img/home-eco.png' srcset='img/home-eco@2x.png 2x')
+              +svgColor('home-eco')
             .product__info
               p Вся продукция изготавливается из
                 span  передовых экологичных видов сырья
@@ -67,16 +66,15 @@
                 .product__dropdown-wrapper
                   .product__article Артикул: 35601
                   .product__dropdown-image
-                    img(src='img/productDrop_1.png' srcset='img/productDrop_1@2x.png 2x')
-                  .product__title Миска с крышкой 2л
+                    img(src='img/productDrop_3.png' srcset='img/productDrop_3@2x.png 2x')
+                  .product__title Контейнер. Профи Kids 15 л
 
 
 
         .products__col.products__col--4.products__col--editable
           .product
             .product__icon
-              //- +svgMono('home-tech')
-              img(src='img/home-tech.png' srcset='img/home-tech@2x.png 2x')
+              +svgColor('home-tech')
             .product__info
               p На предприятии внедрены самые современные технологии, в том числе
                 span  двухкомпонентного литья и нанесения декора по методу In-Mold Labeling.
@@ -92,14 +90,13 @@
                 .product__dropdown-wrapper
                   .product__article Артикул: 35601
                   .product__dropdown-image
-                    img(src='img/productDrop_1.png' srcset='img/productDrop_1@2x.png 2x')
-                  .product__title Миска с крышкой 2л
+                    img(src='img/productDrop_4.png' srcset='img/productDrop_4@2x.png 2x')
+                  .product__title Контейнер. Профи Kids 15 л
 
         .products__col.products__col--4.products__col--editable
           .product
             .product__icon
-              +svgMono('home-design')
-              //- img(src='img/home-design.png' srcset='img/home-design@2x.png 2x')
+              +svgColor('home-design')
             .product__info
               p
                 span Собственный блок промышленного дизайна
