--- a/src/components/homepage/_products.sass
+++ b/src/components/homepage/_products.sass
@@ -84,7 +84,7 @@
   &__dropdown-wrapper
     position: relative
     flex: 1 0 auto
-    padding: 24px
+    // padding: 24px
 
   &__article, &__title
     position: absolute
@@ -101,7 +101,7 @@
     line-height: 1.3
 
   &__dropdown-image
-    position: absolute 0
+    // position: absolute 0
     display: flex
     flex-direction: column
     img
@@ -115,7 +115,7 @@
     margin-top: 35px
     .ico
       font-size: 80px
-      color: $colorPrimary
+      color: transparent
     img
       height: 80px
 
@@ -171,7 +171,7 @@
       min-height: 180px
       top: -80px
     &__dropdown-wrapper
-      padding: 15px
+      // padding: 15px
     &__title
       font-size: 12px
     &__icon
@@ -227,7 +227,7 @@
       top: 100%
       transform: translate3d(-50%, 5px, 0)
     &__dropdown-wrapper
-      padding: 10px
+      // padding: 10px
     &__article, &__title
       left: 15px
     &__title
