--- a/src/components/separator/_separator.sass
+++ b/src/components/separator/_separator.sass
@@ -10,7 +10,7 @@
   &__image
     position: absolute
     bottom: 0
-    left: 0
+    left: -100px
     font-size: 0
     transform: translateY(0px)
     transition: transform .25s $ease
@@ -32,8 +32,9 @@
     &__title
       font-size: 16px
       line-height: 21px
-      padding: 17px 0 17px 175px
+      padding: 17px 0 17px 135px
     &__image
+      left: -50px
       img
         height: 125px
 
@@ -44,6 +45,7 @@
       line-height: 18px
       padding: 13px 0 13px 120px
     &__image
+      left: -45px
       img
-        height: 90px
+        height: 125px
         margin-left: -7px
