--- a/src/components/production/_info.pug
+++ b/src/components/production/_info.pug
@@ -23,8 +23,12 @@
         p.cooperation__info-main
           span Производственный потенциал Полимербыта по своим возможностям на несколько лет опережает ближайших конкурентов в России
           | , а по ряду своих инновационных разработок зачастую превосходит уровень компаний Западной Европы и США.
-      .cooperation__image.scaler(style="padding-bottom: "+ (300/600)*100 +"%; background-image: url(https://res.cloudinary.com/dqruxbmfq/image/upload/w_128,c_fill,e_blur:400/v1567858296/polimer/productionImg1.jpg)" data-aos="fade-left")
-        img(js-lazy data-src='img/productionImg1.jpg' data-srcset='img/productionImg1@2x.jpg 2x')
+      .cooperation__image.scaler(style="padding-bottom: "+ (300/600)*100 +"%;background-image: url(https://res.cloudinary.com/dqruxbmfq/image/upload/w_128,c_fill,e_blur:400/v1567858296/polimer/productionImg1.jpg)" data-aos="fade-left")
+        //- img(js-lazy data-src='img/productionImg1.jpg' data-srcset='img/productionImg1@2x.jpg 2x')
+        .cooperation__video
+          video(muted loop autoplay poster="img/heroBackground_1.jpg")
+            source(src="video/prod1.mp4" type="video/mp4")
+            source(src="video/prod1.webm" type="video/webm")
     .cooperation__row
       .cooperation__info(data-aos="fade-up")
         .cooperation__icon
@@ -32,8 +36,12 @@
         p.cooperation__info-main
           span Производство компании построено на прочной инфраструктурной базе
           | , которая среди прочего включает в себя не имеющую аналогов систему охлаждения пресс-форм, систему автоматической подачи сырья, надежное энергообеспечение.
-      .cooperation__image.scaler(style="padding-bottom: "+ (300/600)*100 +"%; background-image: url(https://res.cloudinary.com/dqruxbmfq/image/upload/w_128,c_fill,e_blur:400/v1567858296/polimer/productionImg2.jpg)" data-aos="fade-right")
-        img(js-lazy data-src='img/productionImg2.jpg' data-srcset='img/productionImg2@2x.jpg 2x')
+      .cooperation__image.scaler(style="padding-bottom: "+ (300/600)*100 +"%;background-image: url(https://res.cloudinary.com/dqruxbmfq/image/upload/w_128,c_fill,e_blur:400/v1567858296/polimer/productionImg2.jpg)" data-aos="fade-right")
+        //- img(js-lazy data-src='img/productionImg2.jpg' data-srcset='img/productionImg2@2x.jpg 2x')
+        .cooperation__video
+          video(muted loop autoplay poster="img/heroBackground_1.jpg")
+            source(src="video/prod1.mp4" type="video/mp4")
+            source(src="video/prod1.webm" type="video/webm")
     p.production__prod(data-aos="fade-up") На Полимербыте установлено современное оборудование итальянского и португальского производства.
   .production__slider-container(data-aos="fade-up")
     .production__slider(js-slider)
