--- a/src/components/brands/_brands.pug
+++ b/src/components/brands/_brands.pug
@@ -1,19 +1,28 @@
 // BRANDS
 .brands
-  .container
-    .brands__title(data-aos="fade-up") Наши бренды
-    .brands__wrapper
-      .brands__col(data-aos="fade-up")
-        a(href="#").brand-card
-          .brand-card__image
-            img(src='img/brandCard_1.svg' alt="")
-          .brand-card__description На предприятии внедрена технология двухкомпонентного литья, на изделия наносятся рисунки с помощью новейшей технологии “In-mould”.
-          a.btn.btn-primary(href="#") Перейти на сайт
+  .brands__bg.brands__bg--polimer
+    img(src='img/bg-polimer.jpg' srcset='img/bg-polimer@2x.jpg 2x')
+  .brands__bg.brands__bg--forma
+    img(src='img/bg-forma.jpg' srcset='img/bg-forma@2x.jpg 2x')
+  .brands__content
+    .container
+      .brands__title(data-aos="fade-up") Наши бренды
+      .brands__wrapper
+        .brands__col(data-aos="fade-up")
+          .brand-card(js-hover-polimer)
+            .brand-card__image
+              //- img(src='img/brandCard_1.svg' alt="")
+              +svgMono('brandCard_1')
+            .brand-card__description На предприятии внедрена технология двухкомпонентного литья, на изделия наносятся рисунки с помощью новейшей технологии “In-mould”.
+            a.btn.btn-primary(href="#") Перейти на сайт
 
-      .brands__col(data-aos="fade-up")
-        a(href="#").brand-card
-          .brand-card__image
-            img(src='img/brandCard_2.svg' alt="")
+        .brands__col(data-aos="fade-up")
+          .brand-card(js-hover-forma)
+            .brand-card__image.brand-card__image--color
+              //- img(src='img/brandCard_2.svg' alt="")
+              +svgColor('brandCard_2')
+            .brand-card__image.brand-card__image-hover
+              +svgMono('brandCard_2')
 
-          .brand-card__description На предприятии внедрена технология двухкомпонентного литья, на изделия наносятся рисунки с помощью новейшей технологии “In-mould”.
-          a.btn.btn-primary(href="#") Перейти на сайт
+            .brand-card__description На предприятии внедрена технология двухкомпонентного литья, на изделия наносятся рисунки с помощью новейшей технологии “In-mould”.
+            a.btn.btn-primary(href="#") Перейти на сайт
