--- a/src/components/header/_header.sass
+++ b/src/components/header/_header.sass
@@ -9,11 +9,13 @@
   will-change: transform
   backface-visibility: hidden
   transform-style: preserve-3d
+  transition: all .25s $ease
   &__wrapper
     display: flex
     align-items: center
     color: $fontColor
     padding: 32px 0 15px
+    transition: all .25s $ease
 
   &__logo
     flex: 0 0 auto
@@ -69,16 +71,6 @@
     display: none
     padding-left: 20px
 
-  &.is-fixed
-    // should be normalized to -100% scroll at this point
-    position: fixed
-    // visibility: hidden
-    transform: translate3d(0,-100%,0) !important
-    transition: transform .25s $ease
-    .header__wrapper
-      padding-top: 10px
-      padding-bottom: 10px
-
   &.is-fixed-visible
     // visibility: visible
     transform: translate3d(0,0,0) !important
@@ -99,6 +91,46 @@
         color: white
       &__wrapper
         color: white
+      &__menu
+        a
+          &:after
+            background: #fff
+          &:hover
+            color: rgba(#fff, 0.8)
+  &.is-fixed
+    // should be normalized to -100% scroll at this point
+    position: fixed
+    // visibility: hidden
+    background: #fff;
+    transform: translate3d(0,0,0) !important
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.08);
+    .header__wrapper
+      padding-top: 15px
+      padding-bottom: 15px
+    .header__logo
+      opacity: 1
+      transform: translateY(0px)
+      pointer-events: all
+    &[data-modifier="is-white"]
+      .header
+        &__logo
+          color: $colorPrimary
+        &__wrapper
+          color: $fontColor
+        &__menu
+          a
+            &:after
+              background: $colorPrimary
+            &:hover
+              color: $colorPrimary
+  &.is-active
+    background: transparent
+    box-shadow: none
+    .header__logo
+      opacity: 0
+      transform: translateY(-20px)
+      pointer-events: none
+
 
 +rmin($hd)
   .header
@@ -134,6 +166,9 @@
       display: block
     &__wrapper
       padding: 16px 0
+    &.is-fixed
+      .header__wrapper
+        padding: 10px 0
 
 +r($sm)
   .header
