--- a/src/components/homepage/_products.sass
+++ b/src/components/homepage/_products.sass
@@ -75,8 +75,9 @@
     box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.15)
     opacity: 0
     transform: translate3d(10px,0,0)
-    will-change: transform
-    transition: transform .25s $ease
+    // will-change: transform
+    will-change: auto
+    transition: all .25s $ease
     &--reverse
       right: 24px
       left: auto
