--- a/src/components/today/_team.sass
+++ b/src/components/today/_team.sass
@@ -26,6 +26,7 @@
         z-index: 2
         bottom: 50px
         left: 34px
+        width: calc(100% - 68px)
         p
           color: #fff
           &.name
