--- a/src/components/brands/_brands.sass
+++ b/src/components/brands/_brands.sass
@@ -17,7 +17,10 @@
     display: flex
     flex-direction: column
     font-size: 0
-    display: none
+    transition: all .25s $ease
+    opacity: 0
+    &.is-active
+      opacity: 1
     img
       position: relative
       z-index: 1
