add history page

--- a/src/pug/history.pug
+++ b/src/pug/history.pug
@@ -8,3 +8,4 @@ block content
   div(js-header-class data-class="is-white")
 
   include ../components/hero/_history
+  include ../components/history/_history
