--- a/src/components/hero/_history.pug
+++ b/src/components/hero/_history.pug
@@ -1,9 +1,11 @@
 // HERO
-.hero
+.hero.hero--with-overlay
   .hero__background(data-aos="blur")
-    img(src='img/heroBackground_1.jpg' srcset='img/heroBackground_1@2x.jpg 2x')
+    video(muted loop autoplay poster="img/heroBackground_1.jpg")
+      source(src="video/cooperation1.mp4" type="video/mp4")
+      source(src="video/cooperation1.webm" type="video/webm")
+    //- img(src='img/heroBackground_1.jpg' srcset='img/heroBackground_1@2x.jpg 2x')
   .hero__content(data-aos="fade-up")
-    .container
+    .container.container--team
       .hero__subtitle Наша история
-      .hero__title
-        strong Датой основания предприятия <strong>«Полимербыт»</strong> считается далекий <strong>1939 год</strong>, когда было запущено производственное предприятие, осуществлявшее новаторское для своего времени литье пластика под давлением.
+      .hero__title Датой основания предприятия <strong>«Полимербыт»</strong> считается далекий <strong>1939 год</strong>, когда было запущено производственное предприятие, осуществлявшее новаторское для своего времени литье пластика под давлением.
