--- a/src/pug/history.pug
+++ b/src/pug/history.pug
@@ -8,4 +8,5 @@ block content
   div(js-header-class data-class="is-white")
 
   include ../components/hero/_history
+  //- include ../components/history/_nav
   include ../components/history/_history
