history nav fixed

--- a/src/components/history/_history.pug
+++ b/src/components/history/_history.pug
@@ -5,19 +5,19 @@
     .container
       .history-nav__overflow
         .history-nav__list
-          a(href="#section-0" data-section="0") 1940
-          a(href="#section-1" data-section="1") 1941
-          a(href="#section-2" data-section="2") 1945
-          a(href="#section-3" data-section="3") 1985
-          a(href="#section-4" data-section="4") 1992
-          a(href="#section-5" data-section="5") 1994
-          a(href="#section-6" data-section="6") 2002-2005
-          a(href="#section-7" data-section="7") 2007-2009
-          a(href="#section-8" data-section="8") 2010
-          a(href="#section-9" data-section="9") 2011
-          a(href="#section-10" data-section="10") 2012
-          a(href="#section-11" data-section="11") 2019
-  section#section-0(data-section="0")
+          a(href="#" data-for-section="0") 1940
+          a(href="#" data-for-section="1") 1941
+          a(href="#" data-for-section="2") 1945
+          a(href="#" data-for-section="3") 1985
+          a(href="#" data-for-section="4") 1992
+          a(href="#" data-for-section="5") 1994
+          a(href="#" data-for-section="6") 2002-2005
+          a(href="#" data-for-section="7") 2007-2009
+          a(href="#" data-for-section="8") 2010
+          a(href="#" data-for-section="9") 2011
+          a(href="#" data-for-section="10") 2012
+          a(href="#" data-for-section="11") 2019
+  section(data-section="0")
     .container
       .history__row
         .history__image(data-aos="blur")
@@ -35,7 +35,7 @@
             p.history__description(data-aos="fade-in") Призванный производить бытовые, хозяйственные и промышленные изделия из сырья пресспорошка, завод состоял в ведении Главхимпласта Главного управления НКХП СССР. В начале 1940-х гг. на заводе действовали обувной цех, производивший полихлорвиниловую обувь (закрыт в конце марта 1946 г.), мастерская по производству босоножек (в ноябре 1946 г. переехала в подвальное помещение 3-й секции дома № 76) и цех пищевых дрожжей (реорганизован в августе 1944 г., его помещение было передано под общежитие). (реорганизован в августе 1944 г., его помещение было передано под
             .history__image-container.history__teleport(data-teleport-target="image-mobile2")
 
-    section#section-1(data-section="1")
+    section(data-section="1")
       .history__row.history__row--reverse
         .history__image
           .history__image-container(js-teleport data-teleport-to="image-mobile3" data-teleport-condition="<768")
@@ -47,7 +47,7 @@
             .history__image-container.history__teleport(data-teleport-target="image-mobile3")
             p.history__description(data-aos="fade-in") В период с 26 октября по 13 ноября 1941 г. часть оборудования и сотрудников была эвакуирована в Нижний Тагил. Так, в Москве осталось 65 прессов из 110. Не смотря на военное положение, завод трудился на благо фронт и выпускал элементы различных боеприпасов, а именно детонаторов, баллистических колпаков, донышек для картечи, а также медальонов.
 
-  section#section-2(data-section="2")
+  section(data-section="2")
     .history__full
       .history__bg(js-teleport data-teleport-to="image-mobile4" data-teleport-condition="<768" style="background: #5E5E60;" data-aos="blur")
         img(src='img/historyImg3.png' srcset='img/historyImg3@2x.png 2x')
@@ -61,7 +61,7 @@
                 .history__image-container.history__teleport(data-teleport-target="image-mobile4" style="background: #5E5E60;" data-aos="blur")
                 p.history__description.history__description--white(data-aos="fade-in") Ассортимент изделий был расширен как за счет изготовления своими силами пресс-форм, так и за счет ввода в эксплуатацию около 60 единиц трофейного оборудования, и полноценной реконструкции цехов. Автопарк завода приобрел в конце войны машину «Мерседес-Бенц», на которой осуществлялась доставка производственных материалов.
 
-  section#section-3(data-section="3")
+  section(data-section="3")
     .container
       .history__row.history__row--reverse
         .history__image
@@ -76,7 +76,7 @@
             .history__image-container.history__teleport(data-teleport-target="image-mobile5")
             p.history__description(data-aos="fade-in") Этот год стал переломным в судьбе производства – предприятие, в соответствии с новыми веяниями социалистической экономики переводится на хозрасчет и обретает новое, востребованное потребителями направление деятельности – производство полиэтиленовых пакетов.
 
-  section#section-4(data-section="4")
+  section(data-section="4")
     .history__full
       .history__bg(js-teleport data-teleport-to="image-mobile6" data-teleport-condition="<768" style="background: #3D3D3D;" data-aos="blur")
         img(src='img/historyImg5.png' srcset='img/historyImg5@2x.png 2x' style="width: 106.5%")
@@ -91,14 +91,14 @@
                 p.history__description.history__description--white(data-aos="fade-in") Менеджмент и сотрудники становятся акционерами компании. Уже в 1993 году контрольный пакет акций предприятия приобретает ряд американских инвесторов, специализирующихся на инвестициях в компании, занимающиеся переработкой полимеров, в разных странах мира.
 
   .container
-    section#section-5(data-section="5")
+    section(data-section="5")
       .history__row
         .history__info.history__info--middle
           .history__info-content(style="max-width: 560px;")
             p.history__date(data-aos="fade-in") 1994 г.
             p.history__title(data-aos="fade-in") 1994 год был ознаменован комплексной модернизацией производственных мощностей и оборудования. АО «Полимербыт» активно осваивает новые технологии, наращивает конкурентоспособность.
 
-    section#section-6(data-section="6")
+    section(data-section="6")
       .history__row.history__row--reverse
         .history__image
           .history__image-container(js-teleport data-teleport-to="image-mobile7" data-teleport-condition="<768")
@@ -112,12 +112,12 @@
             .history__image-container.history__teleport(data-teleport-target="image-mobile7")
             p.history__description(data-aos="fade-in") Осуществляются масштабные инвестиции в оборудование и инфраструктуру. Всего через несколько лет, в 2005 году происходит значительное расширение ассортимента производимой продукции. В том же году руководство компании принимает решение о начале прямых розничных продаж.
 
-            section#section-7(data-section="7")
+            section(data-section="7")
               p.history__date(style="margin-top: 48px;" data-aos="fade-in") 2007 – 2009 г.
               p.history__title(data-aos="fade-in") В 2007 – 2009 годах компания берет курс на концентрацию на производстве бытовых изделий из пластика.
               p.history__description.history__description--mt8(data-aos="fade-in") Начинается масштабная программа внутренней оптимизации и развития.Компания активно инвестирует в развитие, новое оборудование, инфраструктуру, технологии и коллектив.
 
-    section#section-8(data-section="8")
+    section(data-section="8")
       .history__row
         .history__image
           .history__image-container(js-teleport data-teleport-to="image-mobile8" data-teleport-condition="<768")
@@ -129,7 +129,7 @@
             .history__image-container.history__teleport(data-teleport-target="image-mobile8")
             p.history__description(data-aos="fade-in") Продолжается курс на модернизацию, бережливое производство, повсеместную роботизацию производства. Проводится усиление финансового и IT блоков компании, появляется позиция Директора по развитию, частично обновляется рабочий коллектив. Окончательно закрывается производство полиэтиленовых пакетов и руководство компании полностью фокусируется на стратегически важном рынке бытовых изделий из пластика.
 
-    section#section-9(data-section="9")
+    section(data-section="9")
       .history__row
         .history__image
           .history__image-container(js-teleport data-teleport-to="image-mobile9" data-teleport-condition="<768")
@@ -141,14 +141,14 @@
             .history__image-container.history__teleport(data-teleport-target="image-mobile9")
             p.history__description(data-aos="fade-in") Проводятся масштабные инвестиции в складской комплекс, создаются тысячи метров новых площадей, выкупаются в собственность земельные участки под обоими производственными площадками в Москве. Компания активно рассматривает варианты качественного скачка в развитии через создание или приобретение новых производственных площадок.
 
-    section#section-10(data-section="10")
+    section(data-section="10")
       .history__row
         .history__info.history__info--middle
           .history__info-content(style="max-width: 755px;")
             p.history__date(data-aos="fade-in") 2012 г.
             p.history__title(data-aos="fade-in") В 2012 году компания осуществляет самые масштабные инвестиции за свою новейшую историю, ускоряется работа по обновлению и расширению ассортимента продукции, начинается партнерство с Walt Disney, производятся крупные поставки пластиковых изделий для нужд Олимпиады Сочи-2014. Тем самым закладываются прочные основы уверенного роста компании в будущем.
 
-  section#section-11(data-section="11")
+  section(data-section="11")
     .history__full
       .history__bg(js-teleport data-teleport-to="image-mobile10" data-teleport-condition="<768" style="background: #3D3D3D;" data-aos="blur")
         img(src='img/historyImg5.png' srcset='img/historyImg5@2x.png 2x' style="width: 106.5%")
