history fix html, add line

--- a/src/components/history/_history.pug
+++ b/src/components/history/_history.pug
@@ -35,7 +35,8 @@
             p.history__description(data-aos="fade-in") Призванный производить бытовые, хозяйственные и промышленные изделия из сырья пресспорошка, завод состоял в ведении Главхимпласта Главного управления НКХП СССР. В начале 1940-х гг. на заводе действовали обувной цех, производивший полихлорвиниловую обувь (закрыт в конце марта 1946 г.), мастерская по производству босоножек (в ноябре 1946 г. переехала в подвальное помещение 3-й секции дома № 76) и цех пищевых дрожжей (реорганизован в августе 1944 г., его помещение было передано под общежитие). (реорганизован в августе 1944 г., его помещение было передано под
             .history__image-container.history__teleport(data-teleport-target="image-mobile2")
 
-    section(data-section="1")
+  section(data-section="1")
+    .container
       .history__row.history__row--reverse
         .history__image
           .history__image-container(js-teleport data-teleport-to="image-mobile3" data-teleport-condition="<768")
