--- a/src/components/contacts/_contacts.pug
+++ b/src/components/contacts/_contacts.pug
@@ -68,3 +68,47 @@
               a(href="mailto:info@polimerbit.ru")
                 +svgColor('icon-mail-c')
                 | info@polimerbit.ru
+          .contacts__person
+            .contacts__person-image
+              img(src='img/person3.jpg' srcset='img/person3@2x.jpg 2x')
+            .contacts__person-info
+              p Макаренко Ирина
+              a(href="tel:+74991710605")
+                +svgColor('icon-phone-c')
+                | +7 (499) 171-06-05
+              a(href="mailto:info@polimerbit.ru")
+                +svgColor('icon-mail-c')
+                | info@polimerbit.ru
+          .contacts__person
+            .contacts__person-image
+              img(src='img/person3.jpg' srcset='img/person3@2x.jpg 2x')
+            .contacts__person-info
+              p Макаренко Ирина
+              a(href="tel:+74991710605")
+                +svgColor('icon-phone-c')
+                | +7 (499) 171-06-05
+              a(href="mailto:info@polimerbit.ru")
+                +svgColor('icon-mail-c')
+                | info@polimerbit.ru
+          .contacts__person
+            .contacts__person-image
+              img(src='img/person3.jpg' srcset='img/person3@2x.jpg 2x')
+            .contacts__person-info
+              p Макаренко Ирина
+              a(href="tel:+74991710605")
+                +svgColor('icon-phone-c')
+                | +7 (499) 171-06-05
+              a(href="mailto:info@polimerbit.ru")
+                +svgColor('icon-mail-c')
+                | info@polimerbit.ru
+          .contacts__person
+            .contacts__person-image
+              img(src='img/person3.jpg' srcset='img/person3@2x.jpg 2x')
+            .contacts__person-info
+              p Макаренко Ирина
+              a(href="tel:+74991710605")
+                +svgColor('icon-phone-c')
+                | +7 (499) 171-06-05
+              a(href="mailto:info@polimerbit.ru")
+                +svgColor('icon-mail-c')
+                | info@polimerbit.ru
