--- a/src/components/history/_nav.sass
+++ b/src/components/history/_nav.sass
@@ -24,6 +24,16 @@
     flex-wrap: nowrap
     justify-content: space-between
     position: relative
+    &:before
+      position: absolute
+      display: block
+      content: ''
+      width: 100%
+      height: 5px
+      background: #E0E0E0
+      border-radius: 20px
+      left: 0
+      top: 45px
 
     a
       font-size: 14px
@@ -58,7 +68,6 @@
   .history-nav
     top: 70px !important
 
-
 +r($lg)
   .history-nav
     top: 60px !important
@@ -66,11 +75,41 @@
       margin: 0 -24px
       width: calc(100% + 48px)
     &__list
+      &::before
+        position: fixed
+        left: 24px
+        width: calc(100% - 48px)
+      &::after
+        display: block
+        position: relative
+        content: 's'
+        font-size: 1px
+        color: transparent
       a
+        &::before
+          position: absolute
+          display: block
+          content: ''
+          width: 100%
+          border-radius: 0px
+          height: 5px
+          background: #E0E0E0
+          left: 0
+          bottom: 0
+          transition: all .25s $ease
+          opacity: 1
+          z-index: 2
+
         &:first-child
           margin-left: 24px
+          &::before
+            border-top-left-radius: 20px
+            border-bottom-left-radius: 20px
         &:last-child
           margin-right: 24px
+          &::before
+            border-top-right-radius: 20px
+            border-bottom-right-radius: 20px
 
 +r($sm)
   .history-nav
@@ -79,7 +118,12 @@
       margin: 0 -16px
       width: calc(100% + 32px)
     &__list
+      &::before
+        left: 16px
+        width: calc(100% - 32px)
       a
         &:first-child
           margin-left: 16px
+        &:last-child
+          margin-right: 16px
 
